# NumericalCalculation2023

./: README.md  newton.txt  pyproject.toml
data/: data1024.csv
src/: false_position_method.py  least_squares.py  newton.py  report1.py
