[tool.poetry]
name = "math"
version = "0.1.0"
description = ""
authors = ["misawa1005 <58515769+misawa1005@users.noreply.github.com>"]
readme = "README.md"

[packages]
math = {path = ".", include = ["math"]}

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
black = "^23.9.1"
matplotlib = "^3.8.0"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tools.black]
line-length = 79